tests/test_cqasm_v1.0/valid/gates/swap.qasm
version 1.0
qubits 4

map q[0], q0
map q[1], q1

x q0
x q[2]

swap q0, q[3]
swap q[2], q1

display

